[metadata]
name = nsenvelopes
version = 0.1.0
description = Learning the Tb-Ts relation for neutron star envelopes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Konstantinos Kovlakas
author_email = kkovla@gmail.com
license = MIT
keywords = Deep Learning, Python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
url = https://github.com/kkovlakas/nsenvelopes
project_urls =
    Documentation = TBD
    Source Code = https://github.com/kkovlakas/nsenvelopes

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    numpy>=1.26.2
    matplotlib>=3.8.2
    scikit-learn>=1.3.2
    pandas>=2.1.4
    tqdm>=4.66.5
    livelossplot>=0.5.5
    tensorflow>=2.15.0

[options.packages.find]
where = src
